--- a/templates/masterheader.html
+++ b/templates/masterheader.html
@@ -1,7 +1,7 @@
 {% load static %}
  <nav class="navbar navbar-expand-lg position-absolute top-0 z-index-3 w-100 shadow-none my-3  navbar-transparent mt-4">
     <div class="container">
-      <a class="navbar-brand font-weight-bolder ms-lg-0 ms-3 text-white" href="{% url 'home-page' %}">
+      <a class="navbar-brand font-weight-bolder ms-lg-0 ms-3 text-white" href="{% url 'user-home' %}">
           <img src="{% static 'images/short_logo.png' %}" class="logo_login" />
 
       </a>
