--- a/userInterface/templates/userInterface/expectreal-list.html
+++ b/userInterface/templates/userInterface/expectreal-list.html
@@ -94,6 +94,9 @@
                     <table style="margin: 0 auto;" class="table table-max table-bordered align-items-center">
                         <thead class="text-black">
                         <tr>
+                              <th class=" text-dark text-xxs" style="width: 2rem;">
+                              الشركة
+                            </th>
                             <th class="text-dark text-xxs " style="width: 2rem;">
                                 شركة الأبحاث
                             </th>
@@ -113,9 +116,6 @@
                             <th class=" text-dark text-xxs" style="width: 2rem;">
                                 مدى الأنحراف
                             </th>
-                             <th class=" text-dark text-xxs" style="width: 2rem;">
-                               الفارق على أساس سنوى
-                            </th>
 
                             <th class=" text-dark text-xxs" style="width: 2rem;">
                                 المرفق
@@ -125,6 +125,12 @@
                         <tbody>
                         {% for item in expects %}
                             <tr>
+                              <td class="text-xxs">
+                                                                            <a href="{% url 'user-company' item.CompanyEntered.pk %}">
+                                    <p class=" text-xxs"> {{ item.CompanyEntered.name }}</p>
+                                                                            </a>
+
+                                </td>
                                 <td>
 
                                           <a href="{% url 'user-research' item.ResearchCompany.pk %}">
@@ -159,10 +165,7 @@
                                         <p class="text-success text-xxs">{{ item.deviationsecond2020|floatformat:-5 }} %</p>
                                     {% endif %}
                                 </td>
-                              <td class="text-xxs">
-                                    <p class=" text-xxs"></p>
 
-                                </td>
                              <td class="  text-xxs">
                                    <a href="{{ item.report }}"><i class="fas fa-file-pdf text-xxs" aria-hidden="true"></i></a>
                                 </td>
