--- a/userInterface/templates/userInterface/capital-profile.html
+++ b/userInterface/templates/userInterface/capital-profile.html
@@ -30,6 +30,11 @@
 
           {{ data.name }}
                              </h5>
+                             <p class="mb-1">
+                        {% for code in data.company.all %}
+                             {{ code }} -
+                        {% endfor %}
+                             </p>
             </div>
           </div>
         </div>
@@ -50,7 +55,7 @@
                                 <thead class="text_black">
                                 <tr>
                                     <th class="text-center text-xxs" style="width: 1.5rem;">
-                                        الشركة
+                                        المحلل
                                     </th>
                                     <th class="text-center text-xxs" style="width: 2rem;">
                                         شركة الأبحاث
@@ -85,8 +90,8 @@
                                 {% for item in data.CompanyEntered.all %}
                                     <tr>
                                         <td class="align-middle text-center text-xxs">
-                                             <a href="{% url 'user-company' item.CompanyEntered.pk %}">
-                                                            <p class="text-xxs">{{ item.CompanyEntered.name }}</p>
+                                             <a href="{% url 'user-interface' item.AnalayticName.pk %}">
+                                                            <p class="text-xxs">{{ item.AnalayticName.name }}</p>
                                                         </a>
 
                                         </td>
