--- a/userInterface/templates/userInterface/home-page.html
+++ b/userInterface/templates/userInterface/home-page.html
@@ -89,7 +89,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="card-body px-0 pb-2">
+                        <div class="card-body px-0 pb-2 table-responsive-md">
                             <table style="margin:0 auto;"
                                    class="table table-max table-bordered align-items-center mb-auto">
                                 <thead class="text_black">
@@ -97,31 +97,31 @@
                                     <th class="text-center text-xxs" style="width: 1.5rem;">
                                         الشركة
                                     </th>
-                                    <th class="text-center text-xxs" style="width: 2rem;">
+                                    <th class="text-center text-xxs" style="width: 1.2rem;">
                                         شركة الأبحاث
                                     </th>
-                                    <th class="text-center   text-xxs " style="width: 2rem;">
+                                    <th class="text-center   text-xxs " style="width: 1.2rem;">
                                         التوصية
                                     </th>
-                                    <th class="text-center   text-xxs " style="width: 2rem;">
+                                    <th class="text-center   text-xxs " style="width: 1.2rem;">
                                         السعر وقت التوصية
                                     </th>
-                                    <th class="text-center   text-xxs " style="width: 2.5rem;">
+                                    <th class="text-center  text-xxs " style="width: 1.2rem;">
                                         السعر المستهدف
                                     </th>
-                                    <th class="text-center   text-xxs " style="width: 2.5rem;">
+                                    <th class="text-center   text-xxs " style="width: 1.2rem;">
                                         التغير
                                     </th>
-                                    <th class="text-center   text-xxs " style="width: 2.5rem;">
+                                    <th class="text-center   text-xxs " style="width: 1.2rem;">
                                         أخر إغلاق
                                     </th>
-                                    <th class="text-center   text-xxs " style="width: 2.5rem;">
+                                    <th class="text-center   text-xxs " style="width: 1.2rem;">
                                         التغير
                                     </th>
-                                    <th class="text-center   text-xxs " style="width: 1.5rem;">
+                                    <th class="text-center   text-xxs " style="width: 1.2rem;">
                                         التقرير
                                     </th>
-                                    <th class="text-center   text-xxs " style="width: 2rem;">
+                                    <th class="text-center   text-xxs " style="width: 1.2rem;">
                                         تاريخ التوصية
                                     </th>
                                 </tr>
@@ -129,40 +129,40 @@
                                 <tbody>
                                 {% for item in rates %}
                                     <tr>
-                                        <td class="align-middle text-center text-xxs">
+                                        <td class="align-middle text-center text-xxs" style="width: 1.2rem;">
                                              <a href="{% url 'user-company' item.CompanyEntered.pk %}">
                                                             <p class="text-xxs">{{ item.CompanyEntered.name }}</p>
                                                         </a>
 
                                         </td>
-                                        <td class="align-middle text-center text-xxs">
+                                        <td class="align-middle text-center text-xxs" style="width: 1.2rem;">
                                             <a href="{% url 'user-research' item.ResearchCompany.pk %}">
 
                                                         <p class="text-xxs  mb-0">{{ item.ResearchCompany.name }}</p>
                                                              </a>
                                         </td>
-                                        <td class="align-middle text-center text-xxs">
+                                        <td class="align-middle text-center text-xxs" style="width: 1.2rem;">
                                             <p class="text-xxs  mb-0">{{ item.get_Recommendation_display }}</p>
                                         </td>
-                                        <td class="align-middle text-center text-xxs">
+                                        <td class="align-middle text-center text-xxs" style="width: 1.2rem;">
                                             <p class="text-xxs  mb-0">{{ item.CurrenncyValue }}</p>
                                         </td>
-                                        <td class="align-middle text-center text-xxs">
+                                        <td class="align-middle text-center text-xxs" style="width: 1.2rem;">
                                             <p class="text-xxs  mb-0">{{ item.FairValue }}</p>
                                         </td>
-                                        <td class="align-middle text-center text-xxs">
+                                        <td class="align-middle text-center text-xxs" style="width: 1.2rem;">
                                             {% if item.changeFair %}
-                                                <i class="fas fa-arrow-down text-danger" aria-hidden="true"></i>
+                                                <i class="fas fa-arrow-down text-danger" aria-hidden="true" ></i>
                                                 <p class="text-xxs text-danger  mb-0">{{ item.fair_percentage |floatformat:-2 }}</p>
                                             {% else %}
                                                 <i class="fas fa-arrow-up text-success" aria-hidden="true"></i>
                                                 <p class="text-xxs text-success  mb-0">{{ item.fair_percentage |floatformat:-2 }}</p>
                                             {% endif %}
                                         </td>
-                                        <td class="align-middle text-center text-xxs">
+                                        <td class="align-middle text-center text-xxs" style="width: 1.2rem;">
                                             <p class="text-xxs  mb-0">{{ item.MarketValue }}</p>
                                         </td>
-                                        <td class="align-middle text-center text-xxs">
+                                        <td class="align-middle text-center text-xxs" style="width: 1.2rem;">
                                             {% if item.changeMarket %}
                                                 <i class="fas fa-arrow-down text-danger" aria-hidden="true"></i>
                                                 <p class="text-xxs text-danger  mb-0">{{ item.market_percentage |floatformat:-2 }}</p>
@@ -172,16 +172,15 @@
                                             {% endif %}
                                         </td>
 
-                                        <td class="align-middle text-center text-xxs">
+                                        <td class="align-middle text-center text-xxs" style="width: 1.2rem;">
                                             <a href="../../../static/images/reportspdf/{{ item.report.name }}">
                                                 <i class="fas fa-file-pdf text-danger">
                                                 </i>
                                             </a>
                                         </td>
-                                        <td class="align-middle text-center text-xxs">
-                                            <p class="text-xxs text-black-50  mb-0">{{ item.RecommendDate|date:"Y-m-d" }}</p>
+                                        <td class="align-middle text-center text-xxs" style="width: 1.2rem; white-space: nowrap;">
+                                            <p class="text-xxs text-black-50  mb-0">{{ item.RecommendDate|date:"d-m-y" }}</p>
                                         </td>
-
                                     </tr>
 
                                 {% endfor %}
