--- a/userInterface/templates/userInterface/rate-profile.html
+++ b/userInterface/templates/userInterface/rate-profile.html
@@ -14,6 +14,55 @@
       </div>
     </div>
     <div class="container">
+      <div class="row mt-lg-n10 mt-md-n11 mt-n10 justify-content-center">
+        <div class="col-lg-3 col-sm-6 mb-lg-0 mb-4">
+            <a href="{% url 'all-user-rate' %}">
+                <div class="card">
+                    <div class="card-body p-3">
+                        <div class="row">
+                            <div class="col-8">
+                                <div class="numbers">
+                                    <p class="text-sm mb-0 text-capitalize font-weight-bold"> التوصيات على
+                                        الأسهم</p>
+
+                                </div>
+                            </div>
+                            <div class="col-4 text-start">
+                                <div class="icon icon-shape bg-maal shadow text-center border-radius-md">
+                                    <i class="fas fa-sticky-note text-lg opacity-10" aria-hidden="true"></i>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </a>
+        </div>
+        <div class="col-lg-3 col-sm-6 mb-lg-0 mb-4">
+            <a href="{% url 'all-user-expect' %}">
+                <div class="card">
+                    <div class="card-body p-3">
+                        <div class="row">
+                            <div class="col-8">
+                                <div class="numbers">
+                                    <p class="text-sm mb-0 text-capitalize font-weight-bold">التوقعات لأرباح
+                                        الشركات</p>
+                                    <h5 class="font-weight-bolder mb-0">
+                                        <span class="text-success text-sm font-weight-bolder"></span>
+                                    </h5>
+                                </div>
+                            </div>
+                            <div class="col-4 text-start">
+                                <div class="icon icon-shape bg-maal shadow text-center border-radius-md">
+                                    <i class="fas fa-coins text-lg opacity-10" aria-hidden="true"></i>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+            </a>
+        </div>
+    </div>
       <div class="row pt-3 justify-content-center">
           <div class="col-lg-12">
           <div class="card h-100 box-shadow">
@@ -33,7 +82,7 @@
                                                    الشركة
                                                 </th>
   <th class="text-center text-xxs sent" >
-                                                   شؤكة الأبحاث
+                                                   شركة الأبحاث
                                                 </th>
  <th class="text-center   text-xxs sent">
                                                     المحلل
@@ -66,9 +115,9 @@
                                                         </a>
                                                     </td>
  <td class="align-middle text-center text-xxs">
-                                                         <a href="{% url 'user-research' item.ResearchCompany.pk %}">
+                                                         <a href="{% url 'user-research' rate.ResearchCompany.pk %}">
 
-                                                        <p class="text-xxs  mb-0">{{ item.ResearchCompany.name }}</p>
+                                                        <p class="text-xxs  mb-0">{{ rate.ResearchCompany.name }}</p>
                                                              </a>
                                                     </td>
                                                  <td class="align-middle text-center text-xxs">
