--- a/templates/mobileMenu.html
+++ b/templates/mobileMenu.html
@@ -81,6 +81,22 @@
                     <span class="nav-link-text me-1">التقارير</span>
                 </a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link " href="{% url 'all-owners' %}">
+                    <div class="icon icon-shape icon-sm shadow border-radius-md bg-white text-center ms-2 d-flex align-items-center justify-content-center">
+                        <i class="far fa-id-card text-lg mal-color"></i>
+                    </div>
+                    <span class="nav-link-text me-1">كبار الملاك</span>
+                </a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link " href="{% url 'all-arrows' %}">
+                    <div class="icon icon-shape icon-sm shadow border-radius-md bg-white text-center ms-2 d-flex align-items-center justify-content-center">
+                        <i class="far fa-id-card text-lg mal-color"></i>
+                    </div>
+                    <span class="nav-link-text me-1">ملكية الأسهم</span>
+                </a>
+            </li>
 
 {% if request.user.user_type == 1 %}
             <li class="nav-item mt-3">
