--- a/userInterface/templates/userInterface/home-page.html
+++ b/userInterface/templates/userInterface/home-page.html
@@ -64,7 +64,7 @@
                     </a>
                 </div>
                 <div class="col-lg-3 col-sm-6 mb-lg-0 mb-4">
-                    <a href="#">
+                    <a href="{% url 'all-user-owners' %}">
                         <div class="card">
                             <div class="card-body p-3">
                                 <div class="row">
@@ -248,10 +248,14 @@
                         {% for item in arrows %}
                             <tr>
                                 <td class="align-middle text-center text-xxs">
-                                    <p class="text-xxs  mb-0">{{ item.owner.name }}</p>
+                                    <a href="{% url 'owner-profile' item.owner.pk %}">
+                                        <p class="text-xxs  mb-0">{{ item.owner.name }}</p>
+                                    </a>
                                 </td>
                                 <td class="align-middle text-center text-xxs">
+                                    <a href="{% url 'user-company' item.company.pk %}">
                                     <p class="text-xxs  mb-0">{{ item.company.name }}</p>
+                                    </a>
                                 </td>
                                 <td class="align-middle text-center text-xxs">
                                     <p class="text-xxs  mb-0">{{ item.numberOFArrows }}</p>
@@ -263,7 +267,8 @@
                    </div>
                    <div class="card-footer">
                     <div class="col-12 d-flex justify-content-end">
-                        <a href="#"><span
+                        <a href="{% url 'all-user-owners' %}">
+                            <span
                                 class="badge badge-sm bg-maal">المزيد</span></a>
                     </div>
                 </div>
