--- a/templates/masterheader.html
+++ b/templates/masterheader.html
@@ -50,6 +50,14 @@
                                     </a>
 
                                 </li>
+                                    </li>
+                                                                                    <li class="nav-item">
+                                    <a class="nav-link me-2" href="{% url 'add-client' %}">
+                                        <i class="fas fa-user opacity-6 text-white me-1" aria-hidden="true"></i>
+                                       خدمات الموقع
+                                    </a>
+
+                                </li>
                                     {% endif %}
 
                             </ul>
