--- a/userInterface/templates/userInterface/rate-list.html
+++ b/userInterface/templates/userInterface/rate-list.html
@@ -128,10 +128,15 @@
                                             {% for item in rates %}
                                                 <tr>
                                                     <td class="align-middle text-center text-xxs">
-                                                        <a href="{% url 'user-company' item.CompanyEntered.pk %}">
-                                                            <h6 class="text-xxs  mb-0">{{ item.CompanyEntered.name }}</h6>
+                                                                    <a href="{% url 'user-company' item.CompanyEntered.pk %}">
+                                                            <p class="text-xxs">{{ item.CompanyEntered.name }}</p>
                                                         </a>
-                                                    </td>
+      {% if request.user.user_type == 3 %}
+                                              <a href="{% url 'add_wish' item.CompanyEntered.pk %}">
+<i class="fas fa-heart text-lg"></i>                                                        
+</a>           
+
+      {% endif %}                                        </td>
  <td class="align-middle text-center text-xxs">
                                                              <a href="{% url 'user-research' item.ResearchCompany.pk %}">
 
