--- a/owners/templates/owners/createClient.html
+++ b/owners/templates/owners/createClient.html
@@ -28,17 +28,42 @@
               </div>
               </div
             <div class="card-body">
-              <form  method="post">
-    {% csrf_token %}
-                             {% for filed in form %}
-                                            <div class="form-group">
-                                            <label class="text-black"> {{filed.label}} </label>
-                                                {{ filed }}
-                                            </div>
-                                        {% endfor %}
-          <button type="submit" class="btn btn-sm text-white bg-maal">
-                           إشتراك
-                       </button>
+                   <form action="#" method="post">
+                            {% csrf_token %}
+               <div class="form-group row">
+                                <div class="col-md-6 mb-4 mb-lg-0">
+                                    <input type="text" name="first_name" class="form-control" placeholder="(الأسم الأول)">
+                                </div>
+                                <div class="col-md-6">
+                                    <input type="text" name="last_name" class="form-control" placeholder="(إسم العائله)">
+                                </div>
+                            </div>
+
+                            <div class="form-group row">
+                                <div class="col-md-12">
+                                    <input type="email" name="email" class="form-control"
+                                           placeholder="البريد الألكترونى">
+                                </div>
+                            </div>
+                            <div class="form-group row">
+                                <div class="col-md-12">
+                                    <input type="password" name="password" class="form-control" placeholder="كلمة السر">
+                                </div>
+                            </div>
+                            <div class="form-group row">
+                                <div class="col-md-12">
+                                    <input type="text" name="address" class="form-control" placeholder="العنوان">
+                                </div>
+                            </div>
+                            <div class="form-group row">
+                                <div class="col-md-12">
+                                    <input type="number" name="phone" class="form-control" placeholder="رقم الجوال">
+                                </div>
+                            </div>
+                            <center>
+                                    <input type="submit" class="btn bg-maal mb-0 text-white "
+                                           value="إنشاء حساب">
+                                </center>
 
                         </form>
             </div>
