--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -15,7 +15,7 @@
     </div>
     <div class="container">
       <div class="row mt-lg-n10 mt-md-n11 mt-n10 justify-content-center">
-          <div class="col-6 mx-auto">
+          <div class="col-lg-6 col-md-11 mx-auto">
               <div class="card z-index-0 box-shadow h-100">
             <div class="card-body">
                 <form method="post">
