--- a/userInterface/templates/userInterface/expect-list.html
+++ b/userInterface/templates/userInterface/expect-list.html
@@ -127,17 +127,19 @@
                         <tbody>
                         {% for item in expects %}
                             <tr>
-                                <td>
+                                <td class="d-flex" style="justify-content: center;">
+                                             {% if request.user.user_type == 3 %}
+                                              <a  href="{% url 'add_wish' item.CompanyEntered.pk %}">
+                 <i class="fas fa-plus-circle"></i>
+
+</a>           
+
+      {% endif %}
                                              <a href="{% url 'user-company' item.CompanyEntered.pk %}">
 
                                         <p class="text-xxs">{{ item.CompanyEntered.name }}</p>
 </a>
-                 {% if request.user.user_type == 3 %}
-                                              <a href="{% url 'add_wish' item.CompanyEntered.pk %}">
-<i class="fas fa-heart text-lg"></i>                                                        
-</a>           
-
-      {% endif %}
+    
                                 </td>
                                 <td>
 
@@ -156,9 +158,9 @@
                                 </td>
                                 <td>
                                     {% if item.deviationthird2020 < 0 %}
-                                        <p class="text-danger text-xxs ">{{ item.deviationthird2020|floatformat:-5 }} %</p>
+                                        <p class="text-danger text-xxs ">{{ item.deviationthird2020|floatformat:-2 }} %</p>
                                     {% else %}
-                                        <p class="text-success text-xxs">{{ item.deviationthird2020|floatformat:-5 }} %</p>
+                                        <p class="text-success text-xxs">{{ item.deviationthird2020|floatformat:-2 }} %</p>
                                     {% endif %}
                                 </td>
                               <td class="text-xxs">
@@ -167,9 +169,9 @@
                                 </td>
                               <td class="  text-xxs">
                                     {% if item.deviationsecond2020 < 0 %}
-                                        <p class="text-danger text-xxs">{{ item.deviationsecond2020|floatformat:-5 }} %</p>
+                                        <p class="text-danger text-xxs">{{ item.deviationsecond2020|floatformat:-2 }} %</p>
                                     {% else %}
-                                        <p class="text-success text-xxs">{{ item.deviationsecond2020|floatformat:-5 }} %</p>
+                                        <p class="text-success text-xxs">{{ item.deviationsecond2020|floatformat:-2 }} %</p>
                                     {% endif %}
                                 </td>
 
