--- a/userInterface/templates/userInterface/rate-list.html
+++ b/userInterface/templates/userInterface/rate-list.html
@@ -130,8 +130,7 @@
                                                 <td class="d-flex" style="justify-content: center;">
                                              {% if request.user.user_type == 3 %}
                                               <a  href="{% url 'add_wish' item.CompanyEntered.pk %}">
-                 <i class="fas fa-plus-circle"></i>
-
+                                                <i class="far fa-bookmark"></i>
 </a>           
 
       {% endif %}
